Brand strategy refinements and visual enhancements: Updated content to benefit-led messaging, normalized spacing and card heights, enhanced text shadows with coreGold, updated hero h1 to 70px and h2 to 40px, changed hero paragraph fonts to Montserrat, updated footer layout, and refined visual presentation

--- a/capabilities.html
+++ b/capabilities.html
@@ -206,6 +206,7 @@
                                 <div class="card-body text-center">
                                     <p class="text-charcoal mb-3">Bloom'n Events Co is a fully integrated creative production studio and event partner. We design, engineer, build, brand, and deliver experiences from the ground up—locally, collaboratively, and almost entirely in-house.</p>
                                     <p class="text-charcoal mb-0"><strong>If you need it built, designed, coded, printed, engineered, signed, staged, or supplied—we do it.<br>If we can't, we know someone exceptional who can.<br>All you need to bring is a <span class="text-gold">date, a budget, and the ambition to make something meaningful</span>.</strong></p>
+                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">One team. One point of contact. No juggling multiple suppliers.</p>
                                 </div>
                             </div>
                         </div>
@@ -221,6 +222,7 @@
                                 <div class="card-body text-center">
                                     <p class="text-charcoal mb-3">We remove friction by keeping everything under one roof. No hand-offs. No fragmented suppliers. No creative dilution. Just one accountable team carrying your project from first sketch to final guest exit.</p>
                                     <p class="text-charcoal mb-0">Our capabilities span physical, digital, creative, and operational delivery—allowing us to produce cohesive, high-impact events with clarity, speed, and precision.</p>
+                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">You work with one team. They know your project inside and out.</p>
                                 </div>
                             </div>
                         </div>
@@ -244,6 +246,7 @@
                                         <li>Structural and decorative elements engineered for real-world use</li>
                                     </ul>
                                     <p class="text-charcoal mt-3 mb-0">Because fabrication sits alongside design and engineering, concepts remain intact from drawing board to install—no compromises, no surprises.</p>
+                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">Built locally. You see progress. Changes happen quickly.</p>
                                 </div>
                             </div>
                         </div>
@@ -267,6 +270,7 @@
                                         <li>Compliance with relevant standards and regulations</li>
                                     </ul>
                                     <p class="text-charcoal mt-3 mb-0">This allows bold ideas to exist safely—and confidently—in the real world.</p>
+                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">Engineering and creative work together from day one. No last-minute compromises.</p>
                                 </div>
                             </div>
                         </div>
@@ -290,6 +294,7 @@
                                         <li>Media packs and sponsor-ready materials</li>
                                     </ul>
                                     <p class="text-charcoal mt-3 mb-0">Everything is designed to align—brand, message, environment, and audience experience working as one system.</p>
+                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">Design and engineering collaborate from the start. Creative vision meets technical reality.</p>
                                 </div>
                             </div>
                         </div>
@@ -372,8 +377,9 @@
                             <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
                                 <div class="card-body text-center">
                                     <h3 class="text-gold mb-3">Community-driven. Quality-focused.</h3>
-                                    <p class="text-charcoal mb-0">We actively collaborate with trusted local businesses to deliver catering, drinks, cocktails, and specialist services. These partnerships allow us to scale seamlessly while keeping quality high and values aligned.</p>
-                                    <p class="text-charcoal mt-3 mb-0"><strong>Local isn't a limitation—it's a strength.</strong></p>
+                                    <p class="text-charcoal mb-3">We actively collaborate with trusted local businesses to deliver catering, drinks, cocktails, and specialist services. These partnerships allow us to scale seamlessly while keeping quality high and values aligned.</p>
+                                    <p class="text-charcoal mb-0"><strong>Local isn't a limitation—it's a strength.</strong></p>
+                                    <p class="text-charcoal mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">We know who to call. You don't need to vet suppliers. We handle it.</p>
                                 </div>
                             </div>
                         </div>
@@ -496,12 +502,12 @@
         <!-- FINAL CTA SECTION -->
         <section class="section-main" aria-labelledby="capabilitiesCtaHeading">
             <div class="container">
-                <h2 id="capabilitiesCtaHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Ready to Bring Your Vision to Life?</h2>
+                <h2 id="capabilitiesCtaHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Ready to Start Your Project?</h2>
                 <div class="card shadow cta-card">
                     <div class="card-body text-center p-5">
-                        <p class="lead text-charcoal mb-5">Let's discuss how we can bring your vision to life with our unique blend of engineering, artistry, and innovation.</p>
+                        <p class="lead text-charcoal mb-5">Give us a date, a budget, and time—we'll make it happen. One team. One accountable partner. In-house delivery, local partnerships, engineering and creative working together.</p>
                         <div class="cta-buttons">
-                            <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
+                            <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Start Your Project</a>
                             <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Portfolio</a>
                         </div>
                         <p class="text-charcoal mt-4 mb-0">
