--- a/gallery.html
+++ b/gallery.html
@@ -612,10 +612,10 @@
         <!-- FINAL CTA SECTION -->
         <section class="section-main" aria-labelledby="ctaHeading">
             <div class="container">
-                <h2 id="ctaHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Ready to Create Your Next Unforgettable Event?</h2>
+                <h2 id="ctaHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Ready to Start Your Project?</h2>
                 <div class="card shadow cta-card">
                     <div class="card-body text-center p-5">
-                        <p class="lead text-charcoal mb-5">Let's discuss how we can bring your vision to life with our unique blend of engineering, artistry, and innovation.</p>
+                        <p class="lead text-charcoal mb-5">Give us a date, a budget, and time—we'll make it happen. One team handles everything. No juggling multiple vendors.</p>
                         <div class="cta-buttons">
                             <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Start Your Project</a>
                             <a href="about.html" class="btn btn-outline-gold btn-lg mb-3">Learn More About Us</a>
