--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                             <img src="images/Home/Corporate Events Hero Image.jpg" class="card-img-top" alt="Corporate Event Planning" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 33vw" srcset="images/Home/Corporate Events Hero Image-480w.jpg 480w, images/Home/Corporate Events Hero Image-768w.jpg 768w, images/Home/Corporate Events Hero Image-1200w.jpg 1200w, images/Home/Corporate Events Hero Image.jpg 1600w">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Corporate Events</h3>
-                                <p class="text-charcoal">Professional planning and execution for business events, conferences, and product launches.</p>
+                                <p class="text-charcoal">One team handles everything—from strategy to execution. No juggling multiple vendors. No coordination headaches.</p>
                                 <a href="events.html" class="btn btn-gold btn-sm">Explore Corporate Events</a>
                             </div>
                         </div>
@@ -349,7 +349,7 @@
                             <img src="images/Home/Creative Workshops Hero Image.jpg" class="card-img-top" alt="Creative Workshops" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 33vw" srcset="images/Home/Creative Workshops Hero Image-480w.jpg 480w, images/Home/Creative Workshops Hero Image-768w.jpg 768w, images/Home/Creative Workshops Hero Image-1200w.jpg 1200w, images/Home/Creative Workshops Hero Image.jpg 1600w">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Creative Workshops</h3>
-                                <p class="text-charcoal">Engaging hands-on workshops for both children and adults, fostering creativity and connection.</p>
+                                <p class="text-charcoal">Designed and delivered in-house. No external facilitators to brief. Consistent quality, aligned with your brand.</p>
                                 <a href="workshops.html" class="btn btn-gold btn-sm">Discover Workshops</a>
                             </div>
                         </div>
@@ -359,7 +359,7 @@
                             <img src="images/Home/Custom Displays Hero Image.jpg" class="card-img-top" alt="Custom Displays" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 33vw" srcset="images/Home/Custom Displays Hero Image-480w.jpg 480w, images/Home/Custom Displays Hero Image-768w.jpg 768w, images/Home/Custom Displays Hero Image-1200w.jpg 1200w, images/Home/Custom Displays Hero Image.jpg 1600w">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Custom Displays</h3>
-                                <p class="text-charcoal">Stunning, bespoke installations and decorations that transform any space for events or businesses.</p>
+                                <p class="text-charcoal">Engineered and built locally. No shipping delays. No assembly surprises. One team, one vision, delivered on time.</p>
                                 <a href="displays.html" class="btn btn-gold btn-sm">View Custom Displays</a>
                             </div>
                         </div>
@@ -380,7 +380,7 @@
                                     <i class="bi bi-tools" style="font-size: 3rem; color: var(--coreGold);"></i>
                                 </div>
                                 <h3 class="text-gold mb-3">Full In-House Production</h3>
-                                <p class="text-charcoal">From concept to completion, we manage every stage internally—engineering, design, fabrication, and installation. No hand-offs. No fragmented suppliers. One accountable team.</p>
+                                <p class="text-charcoal">One team, one point of contact. No hand-offs between suppliers. No miscommunication. Your project stays intact from first sketch to final install.</p>
                             </div>
                         </div>
                     </div>
@@ -391,7 +391,7 @@
                                     <i class="bi bi-shield-check" style="font-size: 3rem; color: var(--coreGold);"></i>
                                 </div>
                                 <h3 class="text-gold mb-3">Engineering-Grade Reliability</h3>
-                                <p class="text-charcoal">40+ years of combined expertise in high-risk, high-compliance environments. Engineering precision meets creative excellence for corporate, government, and large-scale events.</p>
+                                <p class="text-charcoal">Built to the same standards you expect from your own operations. Safety, compliance, and structural integrity—so you can focus on outcomes, not risks.</p>
                             </div>
                         </div>
                     </div>
@@ -402,7 +402,7 @@
                                     <i class="bi bi-lightbulb" style="font-size: 3rem; color: var(--coreGold);"></i>
                                 </div>
                                 <h3 class="text-gold mb-3">Artistry Meets Technology</h3>
-                                <p class="text-charcoal">We merge traditional craftsmanship with modern digital tools and electronic systems for truly unique experiences.</p>
+                                <p class="text-charcoal">Creative vision executed with precision. No compromises between ambition and reality. Bold ideas, safely delivered.</p>
                             </div>
                         </div>
                     </div>
@@ -416,14 +416,14 @@
         <!-- OUR PROCESS SECTION -->
         <section class="section-secondary" aria-labelledby="processHeading">
             <div class="container">
-                <h2 id="processHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">How We Work</h2>
+                <h2 id="processHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">How We Work... As Easy as...</h2>
                 <div class="row g-4 justify-content-center">
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 shadow text-center process-card">
                             <div class="card-body p-4">
                                 <div class="process-number mb-3" style="font-size: 3rem; font-weight: 700; color: var(--coreGold); line-height: 1;">01</div>
                                 <h3 class="text-gold mb-3" style="font-size: 1.25rem;">Discovery</h3>
-                                <p class="text-charcoal mb-0">We listen to your vision, objectives, and constraints. Date, budget, and time—we understand what matters most.</p>
+                                <p class="text-charcoal mb-0">We listen. Date, budget, time—we understand your constraints. No assumptions. Clear expectations from day one.</p>
                             </div>
                         </div>
                     </div>
@@ -432,7 +432,7 @@
                             <div class="card-body p-4">
                                 <div class="process-number mb-3" style="font-size: 3rem; font-weight: 700; color: var(--coreGold); line-height: 1;">02</div>
                                 <h3 class="text-gold mb-3" style="font-size: 1.25rem;">Design & Engineering</h3>
-                                <p class="text-charcoal mb-0">We design, engineer, and plan every detail in-house. From concept sketches to technical specifications—all under one roof.</p>
+                                <p class="text-charcoal mb-0">Design and engineering work together from the start. No creative concepts that can't be built. No engineering compromises that kill the vision.</p>
                             </div>
                         </div>
                     </div>
@@ -441,7 +441,7 @@
                             <div class="card-body p-4">
                                 <div class="process-number mb-3" style="font-size: 3rem; font-weight: 700; color: var(--coreGold); line-height: 1;">03</div>
                                 <h3 class="text-gold mb-3" style="font-size: 1.25rem;">Fabrication</h3>
-                                <p class="text-charcoal mb-0">We build, create, and prepare everything locally. Custom displays, signage, installations—crafted with precision and care.</p>
+                                <p class="text-charcoal mb-0">Built locally in our workshop. You see progress. You control changes. No remote suppliers, no shipping delays, no surprises.</p>
                             </div>
                         </div>
                     </div>
@@ -450,7 +450,7 @@
                             <div class="card-body p-4">
                                 <div class="process-number mb-3" style="font-size: 3rem; font-weight: 700; color: var(--coreGold); line-height: 1;">04</div>
                                 <h3 class="text-gold mb-3" style="font-size: 1.25rem;">Delivery</h3>
-                                <p class="text-charcoal mb-0">We install, execute, and manage your event from start to finish. One team. One accountable partner. Seamless execution.</p>
+                                <p class="text-charcoal mb-0">One team installs, executes, and manages. The same people who designed it, built it. No hand-offs. No confusion. Just results.</p>
                             </div>
                         </div>
                     </div>
@@ -716,7 +716,7 @@
                 <h2 id="ctaHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Ready to Start Your Project?</h2>
                 <div class="card shadow cta-card">
                     <div class="card-body text-center p-5">
-                        <p class="lead text-charcoal mb-5">Give us a date, a budget, and time—we'll make it happen. One team. One accountable partner. Full-service event production with engineering-grade reliability.</p>
+                        <p class="lead text-charcoal mb-5">Give us a date, a budget, and time—we'll make it happen. One team. One accountable partner. No juggling vendors. No coordination headaches.</p>
                         <div class="cta-buttons">
                             <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Start Your Project</a>
                             <a href="capabilities.html" class="btn btn-outline-gold btn-lg mb-3">Explore Our Capabilities</a>
