--- a/team.html
+++ b/team.html
@@ -291,10 +291,10 @@
                     <div class="col">
                         <div class="card team-card shadow h-100 team-card-shadow">
                             <div class="team-member-image">
-                                <img src="images/Team/team-member-6.jpg" alt="Neeno - Music Maestro" loading="lazy" decoding="async" width="400" height="400">
+                                <img src="images/Team/team-member-6.jpg" alt="Nino - Music Maestro" loading="lazy" decoding="async" width="400" height="400">
                             </div>
                             <div class="card-body text-center">
-                                <h3 class="card-title team-member-name">Neeno</h3>
+                                <h3 class="card-title team-member-name">Nino</h3>
                                 <p class="card-text text-charcoal">Music Maestro</p>
                             </div>
                         </div>
