--- a/about.html
+++ b/about.html
@@ -303,6 +303,9 @@
                                 <p>
                             With over 40 years of combined experience in retail management, casual leasing, agribusiness, placemaking and local Government, we know how to bring energy and community to even the most underused spaces. We're proud collaborators, customising every event to reflect local needs and values.
                         </p>
+                                <p class="mt-3" style="font-size: 0.95rem; font-style: italic;">
+                            Local knowledge. Local partnerships. One team that understands your community.
+                        </p>
                     </div>
                         </div>
                         <div class="col-lg-6 mb-4 order-lg-1 d-flex">
@@ -605,12 +608,12 @@
         <!-- FINAL CTA SECTION -->
         <section class="section-main" aria-labelledby="aboutCtaHeading">
             <div class="container">
-                <h2 id="aboutCtaHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Ready to Create Something Amazing Together?</h2>
+                <h2 id="aboutCtaHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Ready to Start Your Project?</h2>
                 <div class="card shadow cta-card">
                     <div class="card-body text-center p-5">
-                        <p class="lead text-charcoal mb-5">Let's discuss how we can bring your vision to life with our unique blend of engineering, artistry, and innovation.</p>
+                        <p class="lead text-charcoal mb-5">Give us a date, a budget, and time—we'll make it happen. One team. Local knowledge. Engineering-grade reliability.</p>
                         <div class="cta-buttons">
-                            <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
+                            <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Start Your Project</a>
                             <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Portfolio</a>
                         </div>
                         <p class="text-charcoal mt-4 mb-0">
