--- a/displays.html
+++ b/displays.html
@@ -240,13 +240,13 @@
                     <div class="col-12">
                         <div style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
                             <p class="lead text-charcoal mb-3" style="text-align: left; max-width: 100% !important; width: 100% !important;">
-                                At <b>Bloom'n Creative Design Co.</b> we create unique, custom-designed displays that leave lasting impressions. Specialising in large, lifelike installations, we bring creative flair and visual impact to corporate events, public celebrations, seasonal holidays, and venue launches across Perth and Western Australia.
+                                At <b>Bloom'n Creative Design Co.</b> we create custom displays that leave lasting impressions. Large, lifelike installations for corporate events, public celebrations, seasonal holidays, and venue launches across Perth and Western Australia.
                             </p>
                             <p class="text-charcoal mb-3" style="text-align: left; max-width: 100% !important; width: 100% !important;">
-                                Each installation is thoughtfully crafted to reflect your brand identity or event theme, combining artistic innovation with meticulous attention to detail. We've created displays for <a href="gallery.html" class="text-gold">Centuria Capital</a>, <a href="gallery.html" class="text-gold">Hawaiian Shopping Centres</a>, and other leading Perth businesses.
+                                Designed, engineered, and built in-house. Reflects your brand identity or event theme. We've created displays for <a href="gallery.html" class="text-gold">Centuria Capital</a>, <a href="gallery.html" class="text-gold">Hawaiian Shopping Centres</a>, and other leading Perth businesses.
                             </p>
                             <p class="text-charcoal mb-0" style="text-align: left; max-width: 100% !important; width: 100% !important;">
-                                Whether you need seasonal displays, event installations, or permanent displays, we create solutions that captivate and inspire your audience.
+                                Seasonal displays, event installations, or permanent displays. Built locally. Engineered for safety. Installed by the same team who designed it.
                             </p>
                         </div>
                     </div>
