--- a/404.html
+++ b/404.html
@@ -136,21 +136,12 @@
                             Let's get you back to creating something amazing!
                         </p>
                         
-                        <!-- 404 Video with Gold Border -->
+                        <!-- 404 Visual with Gold Border -->
                         <div class="mb-5">
                             <div class="d-inline-block p-3" style="border: 4px solid #D4AF37; border-radius: 15px; background: #f8f9fa;">
-                                <video 
-                                    width="400" 
-                                    height="300" 
-                                    autoplay 
-                                    muted 
-                                    loop 
-                                    class="img-fluid rounded"
-                                    style="max-width: 100%; height: auto;"
-                                >
-                                    <source src="images/Bloom'n Events Co 404.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
+                                <div style="width: 400px; max-width: 100%; height: 300px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #BF9B30 0%, #D4AF37 100%); border-radius: 10px;">
+                                    <i class="bi bi-exclamation-triangle-fill" style="font-size: 120px; color: #1E1E1E;"></i>
+                                </div>
                             </div>
                         </div>
                         
