Trust & Compliance Audit: Added cookie consent banner (GDPR/Privacy Act compliant), enhanced privacy policy with cookie information, fixed footer consistency, added ABN placeholder, created comprehensive audit report

--- a/contact.html
+++ b/contact.html
@@ -284,6 +284,7 @@
                                         <li class="mb-2"><i class="bi bi-envelope-fill"></i> <b>Email:</b> <a href="mailto:enquiries@bloomneventsco.com.au">enquiries@bloomneventsco.com.au</a></li>
                                         <li class="mb-2"><i class="bi bi-geo-alt-fill"></i> <b>Address:</b> Brookton, WA, 6306</li>
                                         <li class="mb-2"><i class="bi bi-clock-fill"></i> <b>Office Hours:</b> Monday to Friday, 9 AM - 5 PM</li>
+                                        <li class="mb-2"><i class="bi bi-building"></i> <b>ABN:</b> [To be provided]</li>
                                     </ul>
                                     <p class="text-start">We look forward to hearing from you!</p>
                                 </div>
